# ree-lending-demo

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  pnpm-lock.yaml
src/declarations/ree-lending-demo-backend/: index.d.ts  index.js  ree-lending-demo-backend.did  ree-lending-demo-backend.did.d.ts  ree-lending-demo-backend.did.js
src/declarations/ree-lending-demo-frontend/: index.d.ts  index.js
src/ree-lending-demo-backend/: Cargo.toml  ree-lending-demo-backend.did
src/ree-lending-demo-backend/src/: canister.rs  exchange.rs  lending.rs  lib.rs  pool.rs  psbt.rs  reorg.rs
src/ree-lending-demo-frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
src/ree-lending-demo-frontend/public/: .ic-assets.json5
src/ree-lending-demo-frontend/public/.well-known/: ic-domains
src/ree-lending-demo-frontend/src/: App.jsx  App.tsx  Home.tsx  index.css  main.jsx  main.tsx
src/ree-lending-demo-frontend/src/components/: CoinIcon.tsx  ConnectWalletModal.tsx  ManagePoolModal.tsx  PoolRow.tsx  Topbar.tsx  topbar.tsx
src/ree-lending-demo-frontend/src/components/ManagePoolModal/: BorrowContent.tsx  DepositContent.tsx  index.tsx
src/ree-lending-demo-frontend/src/components/ui/: button.tsx  dialog.tsx
src/ree-lending-demo-frontend/src/hooks/: useBalance.ts  useSpentUtxos.ts  useUtxos.ts
src/ree-lending-demo-frontend/src/lib/: constants.ts  types.ts  utils.ts
src/ree-lending-demo-frontend/src/lib/exchange/: actor.ts  did.ts
src/ree-lending-demo-frontend/src/lib/orchestrator/: actor.ts  did.ts  index.ts
