[package]
name = "ree-lending-demo-backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
ic-stable-structures = "0.6"
ciborium = "0.2"
ree-exchange-sdk = { git = "https://github.com/octopus-network/ree-types.git", branch = "framework", package = "ree-exchange-sdk" }
serde_json = "1.0"